WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
307240
[model element] iOS doesn't respond to touch events
https://bugs.webkit.org/show_bug.cgi?id=307240
Summary
[model element] iOS doesn't respond to touch events
Mike Wyrzykowski
Reported
2026-02-07 08:33:25 PST
[model element] iOS doesn't respond to touch events
Attachments
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2026-02-07 08:33:37 PST
<
rdar://problem/169876968
>
Mike Wyrzykowski
Comment 2
2026-02-07 08:38:57 PST
Pull request:
https://github.com/WebKit/WebKit/pull/58117
EWS
Comment 3
2026-02-08 09:47:35 PST
Committed
307035@main
(deee3a15697e): <
https://commits.webkit.org/307035@main
> Reviewed commits have been landed. Closing PR #58117 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug