[model element] iOS doesn't respond to touch events https://bugs.webkit.org/show_bug.cgi?id=307240 rdar://169876968

Reviewed by Etienne Segonzac.

HTMLModelElement was only looking at mouse* events and for iOS
should check touch* as well.

* Source/WebCore/Modules/model-element/HTMLModelElement.cpp:
(WebCore::HTMLModelElement::defaultEventHandler):
* Source/WebCore/Modules/model-element/HTMLModelElement.h:

Canonical link: https://commits.webkit.org/307035@main